# bevy_gaussian_splatting

./: .gitignore  ADAPTIVE_RESOLUTION_COMPLETE.md  CITYGAUSSIAN_ANALYSIS.md  COMPREHENSIVE_OPTIMIZATION_PLAN.md  Cargo.toml  FINAL_NOTES.md  GRAM_SCHMIDT_RESULTS.md  GZIP_OPTIMIZATION_COMPLETE.md  GZIP_PERFORMANCE_ANALYSIS.md  IMAGE_IMPORT_GUIDE.md  LIGHTGAUSSIAN_ANALYSIS.md  LIGHTGAUSSIAN_PRETRAINED_ANALYSIS.md  MEMORY_CACHE_FINAL_RESULTS.md  MINI_SPLATTING_ANALYSIS.md  NETWORK_OPTIMIZATION_PLAN.md  OPTIMIZATION_ALTERNATIVES.md  OPTIMIZATION_REPORT.md  PARALLEL_DOWNLOAD_IMPLEMENTATION.md  PARALLEL_DOWNLOAD_RESULTS.md  PERFORMANCE_BASELINE_ANALYSIS.md  PERFORMANCE_BOTTLENECK_ANALYSIS.md  PROJECT_SUMMARY.md  QUICKSTART.md  RADSPLAT_ANALYSIS.md  README.md  SHARP_INFERENCE_TIME_ANALYSIS.md  SHARP_PERFORMANCE_TEST_REPORT.md  SUCCESS_REPORT.md  SVD_ANALYSIS_RESULTS.md  SVD_OPTIMIZATION_LOG.md  start_viewer.sh
src/: image_uploader.rs  main.rs  ply_cache.rs
tools/: light_prune.py
